; Copyright (c) Facebook, Inc. and its affiliates.
;
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.

(library
 (name Labs)
 (public_name infer.Labs)
 (modules
  ResourceLeakDomain
  ResourceLeaks
  UnsafeDeserialization
  UnsafeDeserializationDomain
  NettyHttpHeaderValidation
  NettyHttpHeaderValidationDomain
  ZipSlip
  ZipSlipDomain
  InsecureCookie
  InsecureCookieDomain
  Csrf
  CsrfDomain
  InsecureLdap
  InsecureLdapDomain
  LdapInjection
  LdapInjectionDomain
  LogInjection
  LogInjectionDomain
  PartialPathTraversal
  PartialPathTraversalDomain
  TempDirDisclosure
  TempDirDisclosureDomain
  QueryConcatenation
  QueryConcatenationDomain)
 (flags
  (:standard
   -open
   Core
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint))
 (libraries core IStdlib ATDGenerated IBase IR Absint)
 (preprocess
  (pps ppx_compare)))
